[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "netsen"
version = "0.1.0"
description = "Консольный сканер локальной сети"
requires-python = ">=3.10"

[project.scripts]
netsen = "src.main:scan"

[tool.setuptools.packages.find]   # ← добавь этот блок
where = ["."]
